--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="sidebar text-black-500 md:w-96 w-64 md:relative md:translate-x-0 absolute inset-y-0 left-0 transform -translate-x-full transition delay-200 ease-in-out" style="background-image: url('images/office.jpg');">
-            <div class="close absolute top-0 ml-56 mt-2 cursor-pointer">
+            <div class="close absolute top-0 ml-56 mt-2 cursor-pointer md:hidden">
                 <i class="material-icons text-white hover:text-gray-700">close</i>
             </div>
             <div class="sidebar-profile pt-7 pl-7 text-white bg-red-10">
