--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             firebase.auth().signInWithPopup(googleProvider)
             .then(()=>{
                 console.log('Done');
-                window.location('/');
+                window.location='/';
             })
             .catch(err=>{
                 console.log(err);
