--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="views/profile.view.js"></script>
     <script src="models/profile.model.js"></script>
     <script src="controllers/profile.controller.js"></script>
-    
+
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/main.css">
 
@@ -61,8 +61,9 @@
             </div>
         </div>
         <div class="flex-1 p-10 text-2xl font-bold">
-            content goes here
-            
+            <div id="profile-view" class="">
+                content goes here
+            </div>            
         </div>
     </div>
 </body>
