--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
     <script src="js/firebase-config.js"></script>
     <script src="main.js" defer></script>
-    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6KWa6gXfoH4rKaYuBnP3v_ABWE5Yh7pk"
+  type="text/javascript"></script>
+
     <script src="views/profile.view.js"></script>
     <script src="models/profile.model.js"></script>
     <script src="controllers/profile.controller.js"></script>
